--- a/css/styles.css
+++ b/css/styles.css
@@ -180,3 +180,30 @@ header.masthead .bg-circle-4 {
 .rounded-image.i-3 {
   background:url("../img/03.jpg") center no-repeat;
 }
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+footer {
+  color: #EBF5EE;
+}
+footer .part {
+}
+footer a {
+  display: block;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: rgba(255,255,255,.5);
+  text-decoration: none;
+  background-color: transparent;
+  cursor: pointer;
+  letter-spacing: 1.6px;
+}
+footer a:hover {
+  color: rgba(255,255,255,.75);
+  text-decoration: none;
+}
