--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,11 @@ footer a:hover {
   text-decoration: none;
 }
 
+footer .footer-link {
+  padding: 0;
+  text-transform: initial;
+}
+
 .icon {
   height: 14px;
   margin-right: 7px;
