--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,10 @@ footer .footer-link {
   margin: 0 auto 2rem;
 }
 .recommendation {
+  border-radius:  2rem;
+  box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
 }
 
 .recommendation.r-1 {
