--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ h6 {
   font-weight: 800 !important;
 }
 
+h2 {
+  text-shadow: -2px 2px 2px #A0A0A0;
+}
+
 .btn-xl {
   text-transform: uppercase;
   padding: 1.5rem 3rem;
